--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creamy Baked Macaroni and Cheese</title>
+<link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <article>
@@ -21,7 +23,7 @@
       <dd>4 out of 5</dd>
     </dl>
   </header>
-  <figure>
+  <figure id="main-recipe-photo">
     <img src="nyt_mac_cheese.jpg" alt="Creamy Baked Mac and Cheese">
     <figcaption>Photo and food styling by Christian McDonald</figcaption>
   </figure>
@@ -57,7 +59,7 @@
     </ol>
   </section>
     
-  <section>
+  <section id="nutrition">
     <h3>Nutritional Information</h3> 
     <ul>
      <li>955 calories</li>
